tests/paczka1/fuzzy1/69120065.err
Error in line 4: 4xnagL6Po S423 75,3
Error in line 8: e5YlNWE3SX S423 81,7
Error in line 22: giPVW1yN8d8 S296 58,2
Error in line 16: gyMcrz4J A204 227,6
Error in line 26: giPVW1yN8d8 S148 27,5
Error in line 32: KLcLyF7 A+04 ++,5
